--- a/DotNetCoreSqlDb/appsettings.json
+++ b/DotNetCoreSqlDb/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyDbConnection": "Server=(localdb)\\mssqllocaldb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "defaultConnection": "Data Source=msdocs-core-sql-hc1-server.database.windows.net,1433;Initial Catalog=msdocs-core-sql-hc1-database;User ID=msdocs-core-sql-hc1-server-admin;Password=ZV72OFJ4RQ070DE4$"
   }
 } 
